# transcribeer

./: .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  install.sh  pyproject.toml  skills-lock.json
.github/workflows/: lint.yml  release-build.yml  release-v2.yml  release.yml  trigger-release.yml
.pi/skills/: swiftui-design-principles
.tickets/: tr-1eff.md  tr-73d0.md  tr-75e2.md  tr-8615.md  tr-8e37.md  tr-aafc.md  tr-ab5f.md  tr-d1af.md  tr-d23d.md  tr-fc67.md
Formula/: transcribeer.rb
capture/: Package.swift  capture.entitlements.plist
capture/Sources/CaptureCore/: AudioCapture.swift  AudioDevices.swift  AudioMixer.swift  DualAudioRecorder.swift  MicCapture.swift  SystemAudioCapture.swift  TimingMetadata.swift
capture/Tests/captureCoreTests/: AudioMixerTests.swift  DualAudioRecorderTests.swift  MicCaptureFormatTests.swift  TimingMetadataTests.swift
docs/plans/: README.md  phase-1-distribution.md  phase-2-onboarding.md  phase-3-resource-optimization.md  phase-4-ux-polish.md  phase-5-followups.md
docs/superpowers/plans/: 2026-04-04-custom-prompt-profiles.md
gui/: Info.plist  PLAN.md  Package.resolved  Package.swift  Transcribeer.entitlements.plist
gui/Sources/TranscribeeMenuBar/: AppWatcher.swift  MenuBarView.swift  NotificationManager.swift  TranscribeeMenuBarApp.swift  TranscribeeRunner.swift
gui/Sources/TranscribeerApp/: AppDelegate.swift  TranscribeerApp.swift
gui/Sources/TranscribeerCLI/: main.swift
gui/Sources/TranscribeerCore/: AudioChunker.swift  Config.swift  (+17 more)
obsidian-plugin/: esbuild.config.mjs  main.ts  settings.ts  tsconfig.json
scripts/: generate_logo.py  make-dmg.sh  publish-ivrit-coreml.sh  verify-capture.sh
test-samples/ivrit-ai/: README.md  sample_30s_he.txt
tests/: test_config.py  test_diarize.py  test_summarize.py  test_transcribe.py
tests/e2e/: .gitignore  compare.py  hebrew-loopback.sh
transcribee/: capture.py  cli.py  config.py  diarize.py  gui.py  history_window.py  keychain.py  meta.py  name_prompt.py  session.py  settings_window.py  summarize.py  transcribe.py
transcribeer/: cli.py  config.py  gui.py  history_window.py  settings_window.py  transcribe.py
transcribeer/ui/: history.html  settings.html
(+142 files in other folders)
