[project]
name = "transcribeer"
version = "0.1.1"
description = "Local-first meeting transcription and summarization for macOS"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["transcription", "macos", "whisper", "meeting", "audio", "diarization"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "faster-whisper",
    "torch",
    "torchaudio",
    "requests",
]

[project.urls]
Homepage = "https://github.com/moshebe/transcribeer"
Repository = "https://github.com/moshebe/transcribeer"
"Bug Tracker" = "https://github.com/moshebe/transcribeer/issues"

[project.optional-dependencies]
openai = ["openai>=1"]
anthropic = ["anthropic>=0.25"]
resemblyzer = ["resemblyzer", "scikit-learn"]
pyannote = ["pyannote.audio"]
dev = ["pytest", "openai>=1", "anthropic>=0.25", "resemblyzer", "scikit-learn"]
gui = ["rumps>=0.4", "pyobjc-framework-Cocoa>=10", "pyobjc-framework-UserNotifications>=10", "pyobjc-framework-WebKit>=10", "resemblyzer", "scikit-learn", "openai>=1", "anthropic>=0.25"]

[project.scripts]
transcribeer = "transcribeer.cli:app"
transcribeer-gui = "transcribeer.gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
